fix(www): fixes API Table props overflow bug

--- a/www/app/docs/(layout)/[...slug]/page.module.css
+++ b/www/app/docs/(layout)/[...slug]/page.module.css
@@ -1,3 +1,7 @@
+.code_inline {
+	text-wrap: auto !important;
+}
+
 .toc {
 	position: sticky;
 	top: 40px;
